@@ -487,6 +487,9 @@ void sky::display(const game& gm, const vector3& viewpos, double max_view_dist, 
 	// x in [0,1] means sunny...storm)
 	// sun glow (it moves) must come from a texture
 
+	//fixme: instead of clearing the screen with black we could set the blend function
+	//to GL_SRC_ALPHA, GL_ZERO to blend the sky color into black. This saves
+	//the glClear(), Stars can be drawn after the sky color, with reversed sky alpha.
 	glClearColor(0.0f, 0.0f, 0.0f, 0.0f);
 	glClear(GL_COLOR_BUFFER_BIT);
 	glDisable(GL_LIGHTING);
